@@ -45,7 +45,7 @@
             "Catalyst::Plugin::Session" : "0.40",
             "Log::Any" : "1.03",
             "Moo" : "2.000000",
-            "Starch" : "0.10",
+            "Starch" : "0.11",
             "Type::Tiny" : "1.000005",
             "namespace::clean" : "0.24",
             "perl" : "5.008001",
